--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "dseTxtFileConverter",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "convert hkdse txt file to csv",
   "main": "convert-simplex.js",
   "dependencies": {
-    "lodash": "^3.10.0",
-    "json2csv": "^2.6.1"
+    "json2csv": "^3.2.0",
+    "lodash": "^4.3.0"
   },
   "devDependencies": {},
   "scripts": {
