--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "json2csv": "^3.2.0",
     "lodash": "^4.3.0"
   },
-  "devDependencies": {},
+  "devDependencies": {
+  },
   "scripts": {
     "main": "node index.js"
   },
